--- a/classes.html
+++ b/classes.html
@@ -80,7 +80,7 @@ h3 {
   <h1 style="font-family:arial; text-color:white;">Picking the Right Classes</h1>
   <br>
 
-<p>Picking the right classes in high school is extremely important, both for your mental health and for your college applications.
+<p><font size="3">Picking the right classes in high school is extremely important, both for your mental health and for your college applications.
   Taking classes that are too easy, for example, might help your mental health but hurt your college applications;
    on the other hand, taking classes that are too hard might help your college applications but harm your mental health.
    You need to have a healthy balance, and hopefully these tips will help you find that!
@@ -93,7 +93,7 @@ h3 {
      <div style="text-align:center;"><img src="https://cdn2.hercampus.com/2012/03/30/College_Courses%203_0.jpg" alt="Course Registration Sheet">
 <h3>NOTE:</h3>
 
-<p>Before we jump into picking the right classes,
+<p><font size="3">Before we jump into picking the right classes,
   remember that your transcript is not the only deciding factor on your college applications.
   Your recommendation letters, extracurriculars, job positions, volunteer service, personal essays,
   and/or standardized test scores are important as well.
@@ -107,46 +107,46 @@ h3 {
   However, remember that this isn’t an invitation for you to slack off on certain aspects of your application;
   colleges also want to see how well you manage your time! Here’s the key point: look at the whole picture.</p>
 
-<p>In addition, trends throughout your high school career are incredibly important as well!
+<p><font size="3">In addition, trends throughout your high school career are incredibly important as well!
   Colleges want to see an upward trend (harder and harder classes, better and better grades, etc.), not a downward one.
   Don’t catch the sophomore slack or senioritis!
   All right, now let’s jump into the reason you’re here.</p>
 
 <h3>ADVICE:</h3>
 
-<p>Take the hardest classes that you can handle and that your high school has to offer!
+<p><font size="3">Take the hardest classes that you can handle and that your high school has to offer!
   Don’t worry about whether or not your school as AP or IB courses, or whether or not they allow dual-enrollment--
   high schools are required to send an overview of their curricula and their institute,
   and colleges will know everything, from the breakdown of races to the courses available to each grade level.
   So, don’t focus too much on what you’re not allowed to take--just take the classes you can and get good grades in them.</p>
 
-<p>Have a balanced course load.
+<p><font size="3">Have a balanced course load.
   Nowadays, colleges want well-rounded students (unless you’re exceptional in one field;
   then, it’s acceptable for you to focus on that one strength)--
   make sure that you don’t neglect one core field for another.</p>
 
-<p>If you already have a list of colleges in mind,
+<p><font size="3">If you already have a list of colleges in mind,
   take a look at their requirements for either their general applications or to a particular major;
   by the time you graduate, will you have fulfilled all of those pre-requisites?
   (This corresponds with standardized tests as well.)
   For example, certain programs like nursing or engineering programs, require biology or higher-level math, respectively.</p>
 
-<p>Take classes that are interesting to you;
+<p><font size="3">Take classes that are interesting to you;
   don’t take them just because they’re more rigorous and would look good on your transcript.
   It’s common knowledge that it’s easier to work at things we already like; use this fact to your advantage!</p>
 
-<p>Don’t burn out;
+<p><font size="3">Don’t burn out;
   your mental health should come before your academics (though, of course, this isn’t giving you leeway to slack off).
   Have an accountability partner who knows when to work and when to relax, and who you will listen to.
   Being well rested will help you re-energize for your courses,
   while working too hard may result in a burnout, dropping grades, and harmed mental health.
   You need to be challenged, but you also need to maintain good grades--don’t be stubborn; know where your limits lie.</p>
 
-<p>This is a no-brainer that can easily get away from us as we stack on class after class after class:
+<p><font size="3">This is a no-brainer that can easily get away from us as we stack on class after class after class:
   make sure you meet your graduation requirements!
   The easiest way to do so is by checking in with your guidance counselor.</p>
 
-<p>Find the level of classes that is the best fit for you;
+<p><font size="3">Find the level of classes that is the best fit for you;
   colleges will not be impressed with a transcript full of AP courses if the transcript is full of C’ss,
   nor will they be impressed with a transcript full of A’s if you’re only taking easy classes.
   Find the right balance between doable and challenging. Good luck!</p>
