--- a/clubs.html
+++ b/clubs.html
@@ -79,7 +79,7 @@ h3 {
           <h1 style="font-family:arial;">Joining Clubs</h1>
           
       
-<p style="font-family:arial;">In high school, clubs are a vital part of the social scene;
+<p><font size="3">In high school, clubs are a vital part of the social scene;
   they bring people with the same interests together,
   and provide a recreational space outside of strict academics and grades.
   They're not mandatory, but are a good stepping stone to a successful integration into high school.
@@ -95,14 +95,14 @@ h3 {
     Going back to the topic of meeting new people (and possibly making new friends):
     it will help you socialize with others who might not go to the same classes as you or who may not even be in your grade level.</p>
 
-<p>While considering what kind of clubs and activities you would like to join, take in mind that this is a new beginning and you should want to try something you would have never imagined you would do but that still sounds interesting.
+<p><font size="3">While considering what kind of clubs and activities you would like to join, take in mind that this is a new beginning and you should want to try something you would have never imagined you would do but that still sounds interesting.
   Don’t be scared to try something new.
   If you already know what you would like to join, go for it!
   That’s excellent as well.
   However, if you get to high school and you don’t know what to do, look at all the programs, clubs, and sports they offer and choose the one that most interests you.
   It never hurts to try!</p>
 
-<p>Another really great benefit you would get out of being in a club would be the fact that it will be a great thing to put down in your application when you are applying to colleges.
+<p><font size="3">Another really great benefit you would get out of being in a club would be the fact that it will be a great thing to put down in your application when you are applying to colleges.
   Colleges want to see that you are well rounded student (a well rounded student is an applicant who is not only dedicated to their school work, but who is also dedicated to their extracurricular activities).
   If you are involved in any sort of activity, you will learn new skills like communication skills, networking skills, team cooperation skills, leadership skills, etc.
   Colleges also want to know that you are able to manage your time;
@@ -113,7 +113,7 @@ h3 {
   It will also show that intelligence is not the only skill you can bring to the table.
   Being involved will show everyone that you are enthusiastic in life, which is great!</p>
 
-<p>In addition, the people who are organizing these activities will most likely be willing to give you a recommendation for colleges, internships, honor society organizations, and the like.
+<p><font size="3">In addition, the people who are organizing these activities will most likely be willing to give you a recommendation for colleges, internships, honor society organizations, and the like.
   When you are in an extracurricular activity, you get to network with people, which will help you in the future;
   connections and being able to form them are incredibly important in the real world!
 </p>
