--- a/commonapp.html
+++ b/commonapp.html
@@ -80,7 +80,7 @@ h3 {
   <h1>The Common Application</h1>
   <br>
 
-  <p>The Common Application is how most high school students apply to colleges and universities;
+  <p><font size="3">The Common Application is how most high school students apply to colleges and universities;
   there are other ways to apply (such as the Coalition for Access and Affordability application), but the Common App is the most popular,
   and the main reason why is because you can send out all the information colleges need from one central site and
   because most colleges accept it.
@@ -91,7 +91,7 @@ h3 {
   FERPA selections, recommender invitations, assignments, and forms, PDFs of applications and writing supplements,
   responses to removed questions, and responses to questions that may have a different format or different response options will be deleted.</p>
 
-  <p>Students can create an account on the Common Application whenever;
+  <p><font size="3">Students can create an account on the Common Application whenever;
     there isn’t a requirement that accounts must only belong to seniors,
     so even freshmen can make accounts and start filling out their basic information in the “Common App” tab—
     they just need to make sure to roll over their accounts every year.
@@ -102,7 +102,7 @@ h3 {
     Note that creating an account is free, but most colleges often have an application fee;
     if you can’t pay the fee, talk to your counselor—there are numerous scholarships that help lessen the cost.</p>
 
-<p>  In the Common App, there are five essay topics that college applicants can pick from,
+<p><font size="3">In the Common App, there are five essay topics that college applicants can pick from,
   and most colleges require this essay;
   one tip of ours is to look at them early on so that you can edit and refine the essay without feeling rushed or failing to see crucial mistakes—
   if you want to be as competitive as you can be,
@@ -110,7 +110,7 @@ h3 {
   However, please be sure that the words are yours! Colleges want to get a glimpse of who you are as a person,
   and they can tell when you aren’t being sincere or if the words are someone else’s.</p>
 
-  <p>In addition to the Common App essay, most colleges will ask you to answer additional questions,
+  <p><font size="3">In addition to the Common App essay, most colleges will ask you to answer additional questions,
     write college-specific essays, and submit recommendation letters;
     all of them will ask for information about your high school—
     give those forms to your counselors and teachers for them to fill out!
@@ -121,13 +121,13 @@ h3 {
     Sometimes, a missed fee, question, or section of information may suddenly grab your attention--
     it's best to be prepared as possible for college applications.</p>
 
-  <p>Start with the simple items first (like your basic information),
+  <p><font size="3">Start with the simple items first (like your basic information),
     but take a look at the essay prompts and spend some time thinking about them before you start writing;
     gather your thoughts and then write them all down--
     that is Draft 0, it’s not even Draft 1!
     Start editing and revising until you and a reliable proofreader are both satisfied with your essay.</p>
 
-  <p>The deadline for regular decision is between January 1st and February 1st for most colleges;
+  <p><font size="3">The deadline for regular decision is between January 1st and February 1st for most colleges;
     early action and early decision deadlines are even earlier!
     Your teachers and counselors will most probably have a multitude of students asking for recommendation letters,
     December is a time of midterms and winter break,
@@ -137,11 +137,11 @@ h3 {
     ask them in the spring of your junior year; otherwise, ask them as soon as school starts!
     A more laid-back (but slightly dangerous) option would be to ask them about four weeks before the application is due.</p>
 
-  <p>Create an ordered checklist on what you plan to do;
+  <p><font size="3">Create an ordered checklist on what you plan to do;
     make sure that you don't miss anything, and review the websites on the colleges
     (and potentially special programs, like a nursing or engineering program) so that you know you fulfill all of their requirements.</p>
 
-  <p>When you are writing your essay, keep the word count in mind;
+  <p><font size="3">When you are writing your essay, keep the word count in mind;
     it's helpful to plan out your essay beforehand, so that you know you are getting all of the important information in.</p>
    
    <h3>Resources</h3>
