--- a/essays.html
+++ b/essays.html
@@ -80,7 +80,7 @@ h3 {
   <h1 style="font-family:arial; text-color:white;">Writing College Essays</h1>
   <br>
 
-  <p>Essays are an integral part of the college application process;
+  <p><font size="3">Essays are an integral part of the college application process;
     there are going to be so many people with your exact grades and test scores, b
     ut nobody with your experience and mind.
     One of the ways you can distinguish yourself from the other applicants is writing a killer personal essay--
@@ -96,11 +96,11 @@ h3 {
 <h3>Tips:</h3>
 <p>Don’t be fake; be yourself. College admissions officers can sense hypocrisy from a mile away.</p>
 
-<p>You are one essay out of hundreds and thousands;
+<p><font size="3">You are one essay out of hundreds and thousands;
    don;t make yours forgettable by being lukewarm or focusing on your grades and test scores--
    they already know all of that, they want to find out about you and your personality!</p>
 
-<p>Write about something that's important to you,
+<p><font size="3">Write about something that's important to you,
   whether that's a hobby, an interest, etc.
   Don't try to be someone you're not, and don't try to fake enthusiasm for something you don't like.</p>
 
@@ -109,7 +109,7 @@ h3 {
   if they wanted an itinerary of your travels, they could've just looked up one online!
   How did you feel? What stood out to you? What did you think about the overall experience?</p>
 
-<p>Don't be cliche, but don't try so hard to avoid cliches either.
+<p><font size="3">Don't be cliche, but don't try so hard to avoid cliches either.
   Now, this may seem confusing, so let's break this down.
   Don't be cliche by only writing about a certain topic because it's the standard thing to do
   (for example, writing about your service at a summer camp),
@@ -118,19 +118,19 @@ h3 {
   if it happens to be a common topic, that’s okay!
   Just make sure that the admissions officers can clearly tell that you were genuine when you wrote the essay.</p>
 
-<p>On the topic of being outlandish, also don't try to be too funny.
+<p><font size="3">On the topic of being outlandish, also don't try to be too funny.
   Most of these admissions officers are adults who think differently than you do, and what you think is impressive may be repulsive to them.
   It's a safe bet to not force a one-liner, limerick, or anything off-color into your essay if it's not who you are.</p>
 
-<p>Make sure that you don't waste space and words by repeating test scores or grades or any other part of your application.
+<p><font size="3">Make sure that you don't waste space and words by repeating test scores or grades or any other part of your application.
   Also, make sure that you don't contradict yourself--
   that automatically raises a red flag.
   (But that’s not saying that you can lie as long as you cover your tracks—just don't do it.
   Just be yourself, and the right college will choose you.)</p>
 
-<p>Actually answer the essay prompt. That's a no-brainer, but many people go off-topic quickly.</p>
+<p><font size="3">Actually answer the essay prompt. That's a no-brainer, but many people go off-topic quickly.</p>
 
-<p>Have a reliable person read through and edit your essay,
+<p><font size="3">Have a reliable person read through and edit your essay,
   but make sure the words are still all yours!
   Remember, these people read through essays and applications as their jobs--
   they know when someone is being fake or having someone else write the essay for them.</p>
