--- a/ht.html
+++ b/ht.html
@@ -81,19 +81,19 @@ h3 {
 
     <div style="text-align:center;"><img src="hope.JPG" alt="Hope Tsai" height="480" width="640">
       
-<p>Hello, I’m Hope, a rising junior,
+<p><font size="3">Hello, I’m Hope, a rising junior,
   and I like to spend my free time reading, writing, singing, dancing, and, most recently, coding!
   <b>Fun fact:</b> I traveled all the way from Michigan to attend this program here in Chicago!
   High school can be an incredibly trying time of life for anyone,
   and so I wanted to help create a new website that would have all sorts of advice for each grade level;
   hopefully, this website can give you some new insights on how best to navigate these crazy years!</p>
 
-  <p>I actually started homeschooling in middle school, so my experiences are most likely a bit different than yours.
+  <p><font size="3">I actually started homeschooling in middle school, so my experiences are most likely a bit different than yours.
     In addition, I rely on cold, hard facts when making my decisions--that's not for everyone,
     so feel free to take any or all of my advice with a grain of salt!</p>
 
     <h3>My Personal Experiences + Advice</h3>
-    <p>1. Don't burn yourself out; know your boundaries and limits!
+    <p><font size="3">1. Don't burn yourself out; know your boundaries and limits!
       Since I'm homeschooled, I take my classes either online or through dual-enrollment;
       I wasn't exactly the best at holding myself accountable back then (I'm working on that!), but I was in complete denial,
       so I told myself that I could follow along with two of my sister's courses;
@@ -105,7 +105,7 @@ h3 {
       Or a person with higher authority, like a teacher or guidance counselor?
       Don't be stubborn--know which classes you can take, and how many is too many!</p>
 
-      <p>2. Don't waste your time on "toxic" people.
+      <p><font size="3">2. Don't waste your time on "toxic" people.
         I won't get into specifics here, but some personalities just don't mix well with others, and that's perfectly okay.
         You can still be friends with them (I am), but you don't need to spend every minute with them.
         If someone only calls you up to complain and rant to you, then it's definitely a relationship you should either back away from or fix.
@@ -113,7 +113,7 @@ h3 {
         Instead, spend more time with people you admire!
         Remember that friendship is a two-way street; both parties should care for the other.</p>
 
-        <p>3. I have an inspirational box (digital, metaphorical, and physical) that I use whenever I'm feeling down,
+        <p><font size="3">3. I have an inspirational box (digital, metaphorical, and physical) that I use whenever I'm feeling down,
           and that feeling is completely okay! Don't suppress that, but also don't wallow in that.
           I would definitely recommend creating your own inspirational box filled with everything you love.
           For example, my inspirational box is full of feel-good movies, TV shows, and music (most often nostalgic);
@@ -123,14 +123,14 @@ h3 {
           Messaging my close friends helps as well.
           Know what makes you happy, and put that in your inspirational box.</p>
 
-          <p>4. Go to Tumblr, and scroll through the studyblr tag; it's basically a tag for people to post about their acacdemic lives.
+          <p><font size="3">4. Go to Tumblr, and scroll through the studyblr tag; it's basically a tag for people to post about their acacdemic lives.
             I'm easily inspired by other people doing well, and the studyblr is an incredibly supportive community
             that still recognizes that while school is important, your grades do not determine who you are.
             They have playlists, posts, and tips and advice.
             Of course, this method might not work for everyone!
           You need to make sure that you don't end up spending ALL of your time online.</p>
 
-            <p>5. Take care of your body! Your health (both your body and mental health) is way more important than anything else.
+            <p><font size="3">5. Take care of your body! Your health (both your body and mental health) is way more important than anything else.
               How can you fully enjoy your accomplishments if you're so sick?
               To me, it's not worth it at all.
               Drink tons of water; get up every hour to walk about and take a break.
