--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h3 {
 
  <h3 style="font-family:arial;">Welcome to High School Survival Guide!</h3>
  <br>
-    <p> We all know that high school is very hard.
+    <p> <font size="3">We all know that high school is very hard.
   There are times when we just want to give up because we are so lost, and while the adults may have good intentions, their advice just doesn't seem to work sometimes.
   We are here to tell you that you are not the only one. There are so many of us who all feel the exact same way,
   who all feel lost in high school. Here at HSG (High School Survival Guide), we pride ourselves in understanding
