--- a/meeting.html
+++ b/meeting.html
@@ -83,7 +83,7 @@ h3 {
 
 
  
-<p style="font-family:arial;">Everything about high school seems new and different.
+<p><font size="3">Everything about high school seems new and different.
   During your high school, the things that influence you are going to be the friendships you create and maintain.
   Making new friends is important for your health, and these friendship will be an important impact to your social development and emotional health.
   Having good friendships is very important because it will bring your confidence up and increase your happiness, which will make you perform better at school.
@@ -97,28 +97,28 @@ be confident, be yourself, start conversations with others, get involved in your
 Make sure to resolve conflicts and be brave enough to end friendships when they become detrimental to your physical and/or mental health.</p>
 
 <h3 style="font-family:arial;">How to Meet New People</h3>
-<p>--Join new clubs at school;
+<p><font size="3">--Join new clubs at school;
   it's best to join clubs that suit your interest, so that you will have something in common with the club members.
 even try out a new hobby that you've always wanted to do but never could!
 Be open to new people and new experiences.</p>
-<p>--Initate the conversations! In the beginning of freshman year, almost everybody is as nervous as you are and everybody is as self-conscious about themselves as you are.
+<p><font size="3">--Initate the conversations! In the beginning of freshman year, almost everybody is as nervous as you are and everybody is as self-conscious about themselves as you are.
   Nobody is going to think that you're weird if you start talking with them; most of them will be relieved that someone is actually talking to them!</p>
-  <p>--Don't know how to start a conversation?
+  <p><font size="3">--Don't know how to start a conversation?
     Genuinely comment your thoughts on their clothing (don't be fake!), or talk about how you're feeling about the new school year!
     The key is to talk to them as if they're already a close friend.
   Ask them how they're feeling, too--there's the age-old remark that people love talking about themselves, and that's true!</p>
-    <p>--As the school year progresses, or even as the school year starts, refrain from gossip. While it may be fun to feel as if you're in a special, selective group, others will learn that you're not someone they can easily talk to.
+    <p><font size="3">--As the school year progresses, or even as the school year starts, refrain from gossip. While it may be fun to feel as if you're in a special, selective group, others will learn that you're not someone they can easily talk to.
       Your "friends" may talk about you behind your back as well, and those people are often the ones who will leave once someone "better" comes around.
     If you refrain from gossip, then others will know you as a trustworthy person and you won't find yourself in the wrong crowd.</p>
-      <p>--Instead of burrowing your head into your phone as soon as you reach campus, keep your head up and greet those near your locker or desk.
+      <p><font size="3">--Instead of burrowing your head into your phone as soon as you reach campus, keep your head up and greet those near your locker or desk.
         This will make you look more approachable and friendly. People often feel more at ease around people who are open and have less things to hide;
       try to avoid being angry at those who've done nothing wrong; if something irked you in the morning, try to put that aside before you reach campus!
     This is easier than done, but it is so beneficial to your emotional health!</p>
-        <p>--Go to social events held at your school! Even if no one you know is going, just go and experience something new.
+        <p><font size="3">--Go to social events held at your school! Even if no one you know is going, just go and experience something new.
           Try almost everything. If you do feel very uncomfortable being alone, try to get a friend to go with you.
         This is a season for new beginnings and high school is a chance to discover yourself when you have so many new opportunities at hand.
       Of course, always have an escape plan--the key here is to be comfortable in your surroundings, not anxious or stressed out.</p>
-          <p>--Start and maintain friendships with people you already know from middle school.
+          <p><font size="3">--Start and maintain friendships with people you already know from middle school.
             It's a new start for everybody, so give them a chance even if you've never talked to them before.
           If you see someone you already know, greet them! Nobody is giving too much thought about whether or not you've changed;
         don't think, "But they've always known me as _____! I can't change now!"
@@ -126,7 +126,7 @@ Be open to new people and new experiences.</p>
 
 <br>
 <h3 style="font-family:arial;">Important Note</h3>
-<p>Never feel like you HAVE to meet new people, or that you're a failure if you didn't succeed today.
+<p><font size="3">Never feel like you HAVE to meet new people, or that you're a failure if you didn't succeed today.
   Meeting new people and making friends is not about being dependent on other people;
   you have to still be confident in yourself and feel comfortable about being alone.
   If you feel like you just HAVE to make new friends, stop and just breathe for a second.
