--- a/picking.html
+++ b/picking.html
@@ -80,13 +80,13 @@ h3 {
   <h1 style="font-family:arial; text-color:white;">Tips On How to Pick the Right College</h1>
   <br>
 
-<p>Make a list of colleges you want to go to; the atmosphere and environment at the college are incredibly important.
+<p><font size="3">Make a list of colleges you want to go to; the atmosphere and environment at the college are incredibly important.
   For example, there's a stereotype that schools on the West Coast are more friendly and even healthier,
   while those on the East Coast are just colder and harsher.
   (Of course, it's better to actually visit those colleges to see what you like--
   while stereotypes often have a hint of truth to them, they're not the entire story.)</p>
 
-<p>Find out your needs, wants, and criteria you don't really care about.
+<p><font size="3">Find out your needs, wants, and criteria you don't really care about.
   For example, do you care about the climate?
   Do you like rural, small-town, or urban colleges?
   How much tuition can you pay?
@@ -94,7 +94,7 @@ h3 {
   Do you want to stay in-state or go out-of-state?
   Do you want a small class size or a larger class size? Etc.</p>
 
-<p>Rank your priorities.
+<p><font size="3">Rank your priorities.
   How important exactly is location to you?
   What is the one must-have in college for you?
   If a college fulfills one criteria but not another,
@@ -102,12 +102,12 @@ h3 {
   Some students will have to choose between a dream college and one that has better tuition;
   what is important to you and your family (since your parents are most likely footing the bill)?</p>
 
-<p>If you can, talk to people who go to colleges you're looking at;
+<p><font size="3">If you can, talk to people who go to colleges you're looking at;
   CollegeConfidential is an excellent source.
   Talk with your parents and see if they have any friends who can offer some more advice;
   adults ultimately have had more life experience than you or your peers, and would provide a good outside perspective.</p>
 
-<p>Once you are accepted to a number of different colleges,
+<p><font size="3">Once you are accepted to a number of different colleges,
   revisit that list and go over why you applied to them in the first place.
   Are those reasons still important?
   Which reasons are more important than others?
@@ -115,34 +115,34 @@ h3 {
   it's no good to attend your dream college and then drop out a year later because you can't afford the tuition.
   Sometimes, it's more practical to attend a “lesser” college that can give you better tuition or even pay you to go there.</p>
 
-<p>If you still can't decide, it may be a good idea to revisit the colleges that accepted you;
+<p><font size="3">If you still can't decide, it may be a good idea to revisit the colleges that accepted you;
   this time, don't go strictly to get a tour--
   go prepared with ten to fifteen questions specific to your personal concerns.
   For example, you could ask about your potential department's professors, and whether or not they would offer any research or intern opportunities.
   Do the career counselors have a huge load of students to handle?</p>
 
-<p>Focus on where you want to be after you graduate.
+<p><font size="3">Focus on where you want to be after you graduate.
   Is your main goal in college to expand your perspective?
   Or to solidify it?
   Or is it solely to gain a higher education?
   How much debt are you willing to have? Is money or a “better” education (but “better” is very subjective and depends on what you value) more important?</p>
 
-<p>Compare financial aid packages!
+<p><font size="3">Compare financial aid packages!
   A college's ticket price doesn't automatically mean you can't go there;
   sometimes, the financial aid makes the college cheaper than an originally cheaper college--
   take the time to compare your financial aid packages!</p>
 
-<p>Communicate with your parents;
+<p><font size="3">Communicate with your parents;
   compromise!
   After all, they're most likely the ones footing the bill,
   and they often have wiser advice and better foresight since they have lived longer and seen more.
   However, parents shouldn't be overbearing or making the choice for their children;
   this is the time for students to fully end this chapter of their lives.</p>
 
-<p>Don't procrastinate! May 1st is the deadline to choose between the colleges that have accepted you,
+<p><font size="3">Don't procrastinate! May 1st is the deadline to choose between the colleges that have accepted you,
   and each day you put off talking or even thinking about it, the more stressed out you will be as the date nears.</p>
 
-<p>Ultimately, where you go (that is, prestigious colleges) doesn't matter all that much.
+<p><font size="3">Ultimately, where you go (that is, prestigious colleges) doesn't matter all that much.
   Some people thrive in a big fish-little pond scenario, while others thrive in the exact opposite.
   It's all about what works best for you, and how you make the most out of your situation.
   We're all going to end in the same place, no matter which college we go to,
