--- a/nh.html
+++ b/nh.html
@@ -75,6 +75,7 @@ h3 {
 </style>
 
  <body style="background-color:black;">
+ <img src="picture.png" alt="Slump Year poster" style="width:500px;height:350px;">
 
 <h1>Nana Harrison</h1>
 <p> My name is Nana Harrison. I am from Accra, Ghana. I attend an all Girls Private school
