--- a/shapeyourself.html
+++ b/shapeyourself.html
@@ -79,7 +79,7 @@ h3 {
   <br>
 
 <!--this is the first tab under the 10 grade portion  -->
-    <p style="font-family:arial;">Sophomore year can make you feel out of place; after all, you're not the newest, youngest kid on the block, nor are you the upperclassmen preparing for college.
+    <p><font size="3">Sophomore year can make you feel out of place; after all, you're not the newest, youngest kid on the block, nor are you the upperclassmen preparing for college.
     This is the year that you really discover who you are; this is also the year where you can try to change yourself into who you want to be without the stress of a completely new environment. 
 	    In order to shape yourself into a successful person, you must surround yourself with those who aspire also to become better people in life. 
 	    You must surround yourself with people who encourage you and uplift you. 
@@ -92,10 +92,10 @@ h3 {
 
   <h3 style="font-family:arial"> Why is it Important to Shape Yourself? </h3>
 
-  <p style="font-family:arial;">Sophomore year is important for shaping yourself because you are no longer a new face--
+  <p><font size="3">Sophomore year is important for shaping yourself because you are no longer a new face--
 	  people have a perception of who you are, and that can either be good or bad; this is the year to change before the stress of testing comes next year.</p>
 
-	<p style="font-family:arial;"> However, sophomore year can be weird when it comes down to molding and shaping yourself,
+	<p><font size="3"> However, sophomore year can be weird when it comes down to molding and shaping yourself,
    because you’re not sure if you should start preparing yourself for college or if you should just have fun.
 	The best way to mold and shape yourself is to have freedom while also
   preparing yourself for colleges by getting great grades and by studying for or taking standardized tests like the ACT or SAT.
