--- a/slackyr.html
+++ b/slackyr.html
@@ -83,7 +83,7 @@ h3 {
 <img src="slump.png" alt="Slump Year poster" style="width:500px;height:350px;">
 
 
-  <p><font size="5"> Sophomore year is very difficult because
+  <p><font size="3"> Sophomore year is very difficult because
 you think you have the rhythm of balancing classes and social life.
 It’s also difficult because you're not as excited about the school
 since you have already experienced it. Sophomore year might make you
@@ -98,16 +98,16 @@ therefore requires different skills and preparation.</font></p>
 <img src="slump2.jpg" alt="Slump Year poster" style="width:500px;height:350px;">
 <img src="soph_slump.jpg" alt="slump year" style="width:500px;height:350px;">
 
-<p><font size="5"> During SLump Year you often feel the need to give up on work. You are at that year where
+<p><font size="3"> During SLump Year you often feel the need to give up on work. You are at that year where
 you are no longer the "baby" of the school nor are you the eldest either.
 During Slum Year, you start to notice your grades dropping. You are no longer
 as excited as you were freshmen year. Your group of friends are dwindling.
 Everything seems to be at a stand still.
 -----All these feelings are normal;however,there are many ways
-to avoid Slump year</font></p>
+to avoid Slump Year</font></p>
 <img src="crisis.jpg" alt="slump year" style="widith:100px:height;100px;">
 <img src="pop.jpg" alt="slump year" style="widith:1000px:height;750px;">
-<p><font size="5">During Sophomore slump students should try to get in
+<p><font size="3">During Sophomore slump students should try to get in
   touch with their feeling, fight through it. Mental Health is very
   important sophomore year. Take the time out of your day to check in
   with yourself. Ask yourself; "Am I Happy","Am I getting enough sleep",
