--- a/study.html
+++ b/study.html
@@ -78,24 +78,24 @@ h3 {
 
  <h1>Study Habits:</h1>
 
-<p>It's important to develop study skills because they will help you when it comes down to your high school classes and standardized tests.
+<p><font size="3">It's important to develop study skills because they will help you when it comes down to your high school classes and standardized tests.
 In addition, study habits are helpful in school, but they can also be helpful in life.
 Study habits can carry on from high school to college and so on. </p>
 
 <h3>Top 5 Study Habits:</h3>
 
-<p>1. Stay Organized--this means you have time set out for studying and you have all your studying materials in one easily accessible place.</p>
+<p><font size="3">1. Stay Organized--this means you have time set out for studying and you have all your studying materials in one easily accessible place.</p>
 
-<p>2. Repetition--try reciting something several times; this increases the chances of you remembering the material you studied.</p>
+<p><font size="3">2. Repetition--try reciting something several times; this increases the chances of you remembering the material you studied.</p>
 
-<p>3. Good Lighting--good lighting helps you pay attention more to your work,
+<p><font size="3">3. Good Lighting--good lighting helps you pay attention more to your work,
 and it keeps your eyes from straining so you don't get headaches that would harm you or your studying.</p>
 
-<p>4. Quiet Space--this will allow your brain to retain and actually understand the information better. We know that sometimes we think listening to music will help us stay focused,
+<p><font size="3">4. Quiet Space--this will allow your brain to retain and actually understand the information better. We know that sometimes we think listening to music will help us stay focused,
 but it actually makes you lose the information because your focus is on the music. Take breaks instead; try one five-minute break every thirty minutes.
 Soon, you will develop your own personal system that will keep you focused on your work when you have to.</p>
 
-<p>5. Do Not Procrastinate--waiting until the last minute to study is a bad idea,
+<p><font size="3">5. Do Not Procrastinate--waiting until the last minute to study is a bad idea,
 especially when you decide to study right before you go to bed,
 because it makes you less likely to remember anything that you studied.
 In addition, studying before you go to to bed is a horrible idea; you're most likely too tired to remember anything.
