--- a/summer.html
+++ b/summer.html
@@ -78,7 +78,7 @@ h3 {
 
 <h1>Summer Internships and Jobs</h1>
 
-<p>While applying to colleges, they will ask you if you did any sort of jobs or internships during the summer;
+<p><font size="3">While applying to colleges, they will ask you if you did any sort of jobs or internships during the summer;
 they want to see if you slacked off during that off season.
  Colleges love to see that you are active even if you are out of school,
  and they like that you are using your time wisely.
@@ -98,20 +98,20 @@ they want to see if you slacked off during that off season.
 
 <br>
 
-<p>You want to get an internship/program in a field that you would like to explore, to see if you would really enjoy it for a future career.
+<p><font size="3">You want to get an internship/program in a field that you would like to explore, to see if you would really enjoy it for a future career.
 It can also be a field you've never expected to look into;
  you can learn a lot about it, and you can also learn new skills that will help you in the future.
  Before you accept the opportunity, be sure to talk someone who was there before,
   and let them share their experiences and see what's the internship’s mission.
    Also, ask about what kind of stuff you will be working on and hopefully it will help you clarify your decision on if you want to do that internship.</p>
 
-<p>It's important to know that you can also volunteer during your summer; colleges just want to see that you are still involved in society once school lets out.
+<p><font size="3">It's important to know that you can also volunteer during your summer; colleges just want to see that you are still involved in society once school lets out.
   They want to see how you manage your time and how you contribute to those around you.
   Jobs, volunteer service, and internships all fit that gap during the summer;
   programs for your extracurricular activity also work as well.
   The main point here is to not be lazy the whole summer!</p>
 
-  <p>However, still relax and rejuvenate yourself for the upcoming school year!
+  <p><font size="3">However, still relax and rejuvenate yourself for the upcoming school year!
     Don't burn yourself out by stacking activity upon activity during those months;
     you still need to rest and prepare yourself for the next year.
     Find a healthy balance between work and rest, and see that to the end!</p>
