--- a/nh.html
+++ b/nh.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Berenice Perez</title>
+<title>Nana Harrison</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
