--- a/ch.html
+++ b/ch.html
@@ -162,7 +162,7 @@ h3 {
 
           <br>
 
-  <div style="text-align:center;"><img src="charlesia.JPG" alt="Char'lesia Hughes">
+  <div style="text-align:center;"><img src="charlesia.JPG" alt="Char'lesia Hughes" width="380" height="540">
     <br>
     <br>
 
@@ -170,8 +170,10 @@ h3 {
 I remember my sophomore year I tried to balance school while also doing cheerleading and maintaining a job. There was several times when I would go home crying because the pressure was too much. Then one day I came to school and my eyes were puffy and red and my advisor asked me, “Char’lesia what’s wrong?” I didn’t know what to say, so I broke down and said, “I can’t do it, but I can’t let them down,” at this point she began to cry and told me to tell her everything. I finally told her everything and it felt like a big burden had been lifted off of me. I then realized that I thought I knew how to balance school, personal life, and a job, but I really didn’t and that was okay because I was just a sophomore at the time.
 
 </p>
-
-            <p><font size="3">1.Never be afraid to ask for help, whether it's from a friend, counselor, teacher, parents, or siblings.
+    <p> I heard about the program Girls Who Code through one of deans. She told me that the program would be perfect for me because I have done step and cheerleading and, so the sisterhood vibe would be fitting for me. Joining the program was scary because I didn’t know anybody there and I have never worked, nor have I ever heard of something called coding. I recommend joining the program because it pushes out of comfort zone and that feeling of being uncomfortable makes you comfortable. The program also teaches you the responsibility of working efficiency and working with others 
+</P>
+   <p>Advice:</p>     
+   <p><font size="3">1.Never be afraid to ask for help, whether it's from a friend, counselor, teacher, parents, or siblings.
 </p>
 
 <p><font size="3">2.Avoid peer pressure by sticking to who you are as a person and your values, so say no when ever you don’t agree with something. .</p>
@@ -181,6 +183,7 @@ I remember my sophomore year I tried to balance school while also doing cheerlea
 
 <p><font size="3">4.Always have your end goal in mind, it will help to avoid drama and evaluating your friends will also help to maintain your goals.
  </p>
+
 
 <p><font size="3">5.Don’t be afraid to ask for advice, you’ll be surprised by how someone else’s advice about a situation can affect the outcomes and how they help make your high school life more easier.
  </p>
