--- a/ch.html
+++ b/ch.html
@@ -116,6 +116,7 @@
 
     color: white;
 
+   
     margin:20px
 
 }
@@ -167,12 +168,14 @@ h3 {
     <br>
 
 <p> My name is Char’lesia Hughes I am 16 years old and I am from Chicago. I attend The Noble Academy, a charter school, so we have a lot of rules and regulations that must be followed and a strong disciplinary culture. I come from a big family. I have five siblings on my mom side and six on my dad side of the family.I have done cheerleading for 2 years and counting and step for 8 years. My zodiac sign is a libra. I love sports/clubs that involves or builds a sisterhood because I love it when other women power one another and supports them.
-I remember my sophomore year I tried to balance school while also doing cheerleading and maintaining a job. There was several times when I would go home crying because the pressure was too much. Then one day I came to school and my eyes were puffy and red and my advisor asked me, “Char’lesia what’s wrong?” I didn’t know what to say, so I broke down and said, “I can’t do it, but I can’t let them down,” at this point she began to cry and told me to tell her everything. I finally told her everything and it felt like a big burden had been lifted off of me. I then realized that I thought I knew how to balance school, personal life, and a job, but I really didn’t and that was okay because I was just a sophomore at the time.
+I remember my sophomore year I tried to balance school while also doing cheerleading and maintaining a job.</p> 
+    
+    <p>There was several times when I would go home crying because the pressure was too much. Then one day I came to school and my eyes were puffy and red and my advisor asked me, “Char’lesia what’s wrong?” I didn’t know what to say, so I broke down and said, “I can’t do it, but I can’t let them down,” at this point she began to cry and told me to tell her everything. I finally told her everything and it felt like a big burden had been lifted off of me. I then realized that I thought I knew how to balance school, personal life, and a job, but I really didn’t and that was okay because I was just a sophomore at the time.
 
 </p>
     <p> I heard about the program Girls Who Code through one of deans. She told me that the program would be perfect for me because I have done step and cheerleading and, so the sisterhood vibe would be fitting for me. Joining the program was scary because I didn’t know anybody there and I have never worked, nor have I ever heard of something called coding. I recommend joining the program because it pushes out of comfort zone and that feeling of being uncomfortable makes you comfortable. The program also teaches you the responsibility of working efficiency and working with others 
 </P>
-   <p>Advice:</p>     
+   <h3>Advice:<h3>     
    <p><font size="3">1.Never be afraid to ask for help, whether it's from a friend, counselor, teacher, parents, or siblings.
 </p>
 
